<resources>
    <string name="app_name">Moodify</string>
    <string name="no_photo_selected">No photo selected.</string>
    <string name="no_face_detected">No face detected.</string>
    <string name="an_error_occurred_during_analysis">An error occurred during analysis: %1$s</string>
    <string name="mood">Mood: %1$s</string>
    <string name="select_photo_from_gallery">Select Photo from Gallery</string>
    <string name="your_image">Your Image</string>
    <string name="login_with">Login with</string>
    <string name="welcome_image">welcome image</string>
    <string name="music_plak">music plak</string>
    <string name="tape">Tape</string>
    <string name="slogan">Slogan</string>
    <string name="play_image">Play image</string>
    <string name="spotify">Spotify</string>
    <string name="slogan_text">\"Let your mood define the music.\"</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="play_list_image">Play list image</string>
    <string name="descreption">Playlist - made for Kurt</string>
    <string name="made_for">%1$s - made for %2$s</string>
    <string name="kurt_playlist">Kurt - Playlist</string>
    <string name="play_playlist">Play Playlist</string>
    <string name="playlist_followed_successfully">Playlist followed successfully</string>
    <string name="failed_to_follow_playlist">Failed to follow playlist</string>
    <string name="successful_text">Your playlist has been added to your library.\nWould you like to open your library?</string>
    <string name="successful_track_text">The track has been added to your favorites.\nWould you like to open your liked songs?</string>
    <string name="face_detection_failed_text">Your face could not be detected. Please try again.</string>
    <string name="stay_in_moodify">Stay in Moodify</string>
    <string name="open_in_spotify">Open in Spotify</string>
    <string name="eminem">Eminem</string>
    <string name="menu">menü</string>
    <string name="playlist">Playlist:</string>
    <string name="track">Track:</string>
    <string name="add_track_in_playlist">add track in playlist</string>
    <string name="track_followed_successfully">Track Followed Successfully</string>
    <string name="failed_to_follow_track">Failed To Follow Track</string>
    <string name="imageCamera">Open Camera</string>
    <string name="camera_permission_denied">Camera permission denied. Permissions granted from settings.</string>
    <string name="gallery_permission_denied">Gallery permission denied. Permissions granted from settings.</string>
    <string name="settings">Setting</string>
    <string name="text_mood_detail">•Keep Your Face Clear\n\n• Use Good Lighting\n\n• Simple Background\n\n• Avoid Accessories\n\n• Face Fully Visible</string>
    <string name="open_settings">Open Settings</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="error">Error</string>
    <string name="ad_loading">Ad Loading...</string>
</resources>