<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/spacer_16"
    android:layout_marginVertical="@dimen/spacer_8"
    app:cardBackgroundColor="?backgroundColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/spacer_8">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewTrack"
            android:layout_width="@dimen/spacer_64"
            android:layout_height="0dp"
            app:cardCornerRadius="@dimen/spacer_8"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageViewTrack"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/play_list_image"
                android:scaleType="centerCrop"
                android:src="@drawable/image_32" />

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacer_8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageButtonAdd"
            app:layout_constraintStart_toEndOf="@+id/cardViewTrack"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textViewTrackName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/spacer_16"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/app_name"
                android:textSize="@dimen/text_size_22"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewTrackArtist"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/eminem"
                app:layout_constraintEnd_toEndOf="@+id/textViewTrackName"
                app:layout_constraintStart_toStartOf="@+id/textViewTrackName"
                app:layout_constraintTop_toBottomOf="@+id/textViewTrackName" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageButton
            android:id="@+id/imageButtonAdd"
            android:layout_width="@dimen/spacer_32"
            android:layout_height="@dimen/spacer_32"
            android:background="@color/transparent"
            android:contentDescription="@string/add_track_in_playlist"
            android:scaleType="centerCrop"
            android:src="@drawable/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>