<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.ListFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacer_32"
                android:text="@string/app_name"
                android:textSize="@dimen/text_size_24"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewTrack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacer_16"
                android:text="@string/track"
                android:textSize="@dimen/text_size_24"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/recyclerViewTrack"
                app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

            <com.jackandphantom.carouselrecyclerview.CarouselRecyclerview
                android:id="@+id/recyclerViewTrack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTrack"
                android:layout_marginTop="@dimen/spacer_8"
                tools:listitem="@layout/item_track" />

            <TextView
                android:id="@+id/textViewPlaylist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacer_16"
                android:text="@string/playlist"
                android:textSize="@dimen/text_size_24"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/recyclerViewPlayList"
                app:layout_constraintTop_toBottomOf="@+id/recyclerViewTrack" />

            <com.jackandphantom.carouselrecyclerview.CarouselRecyclerview
                android:id="@+id/recyclerViewPlayList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/spacer_8"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewPlaylist"
                tools:listitem="@layout/item_playlist" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>