<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.MoodFragment">

    <TextView
        android:id="@+id/moodTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacer_32"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="@dimen/text_size_24"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loadingAnimationView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="@dimen/spacer_8"
        app:layout_constraintBottom_toTopOf="@id/textMaterialCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/moodTextView"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/face" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/textMaterialCardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/spacer_16"
        android:layout_margin="@dimen/spacer_16"
        app:cardBackgroundColor="?backgroundColor"
        app:layout_constraintBottom_toTopOf="@id/selectPhotoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/spacer_16"
            android:text="•Keep Your Face Clear\n\n• Use Good Lighting\n\n• Simple Background\n\n• Avoid Accessories\n\n• Face Fully Visible"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/selectPhotoButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/spacer_16"
        android:layout_marginEnd="@dimen/spacer_8"
        android:textStyle="bold"
        android:background="@drawable/button_background"
        android:text="@string/select_photo_from_gallery"
        app:layout_constraintBottom_toBottomOf="@+id/imageBtnSelectPhoto"
        app:layout_constraintEnd_toStartOf="@id/imageBtnSelectPhoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageBtnSelectPhoto" />

    <ImageButton
        android:id="@+id/imageBtnSelectPhoto"
        android:layout_width="@dimen/spacer_64"
        android:layout_height="@dimen/spacer_48"
        android:layout_marginEnd="@dimen/spacer_16"
        android:layout_marginBottom="@dimen/spacer_32"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/light_gray"
        android:contentDescription="@string/imageCamera"
        android:padding="@dimen/spacer_16"
        android:scaleType="centerCrop"
        android:src="@drawable/camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/selectPhotoButton"
        app:tint="@color/green" />


</androidx.constraintlayout.widget.ConstraintLayout>